<resources>
    <string name="app_name">Post Vish</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_no_account_signup">Don\'t have an account? <font color="#2196F3">Register Now</font></string>
    <string name="txt_register_header">Create New Account</string>
    <string name="txt_register_subheader">Please provide all the required information</string>
    <string name="txt_username">Username</string>
    <string name="txt_username_hint">hrithikvish</string>
    <string name="txt_username_hint_emily">emilys</string>
    <string name="txt_email">Email</string>
    <string name="txt_email_hint">hrithikvishwakarma05@gmail.com</string>
    <string name="txt_password">Password</string>
    <string name="txt_password_hint">........</string>
    <string name="txt_password_hint_emily">emilyspass</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_already_have_account">Already have an account? <font color="#2196F3">Log In</font></string>
    <string name="txt_login_header">Welcome Back!</string>
    <string name="txt_login_subheader">Login to access your posts</string>
    <string name="txt_login">Login</string>
    <string name="txt_error_message">%1$S*</string>
    <string name="note_title">Title</string>
    <string name="post_tags">Tags</string>
    <string name="txt_title_hint">Write your title</string>
    <string name="txt_tags_hint">Enter your tags</string>
    <string name="txt_body">Body</string>
    <string name="txt_body_hint">Write your body</string>
    <string name="txt_submit">Submit</string>
    <string name="add_note">Add Note</string>
    <string name="posts">Posts</string>
    <string name="create_post">Create Post</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>